--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <feign.version>2.1.1.RELEASE</feign.version>
+        <spotify.version>2.1.2</spotify.version>
     </properties>
 
     <dependencies>
@@ -31,9 +31,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>${feign.version}</version>
+            <groupId>se.michaelthelin.spotify</groupId>
+            <artifactId>spotify-web-api-java</artifactId>
+            <version>${spotify.version}</version>
         </dependency>
 
         <dependency>
